karl package Changelog
======================

Unreleased
----------

- Made the "view all" view work for reference sections (LP #575712).

- Allow nesting of sub-sections within reference sections (LP #575712).
  Also allow adding pages and files at the root of reference manuals, making
  them behave like reference sections.

3.30 (2010-05-06)
-----------------

- Changed wording of title field on file edit screen to remove mention
  of nonexistent checkbox (LP#575789).

- Calendar event, blog entry, newsitem, page, reference add behavior
  tweak (LP#576033).

- Batching in syslog view (LP#563745).

- LP #575276 File view now uses generic layout when outside of a community.

- Removed deprecated code that supported old profile pictures.

- LP #571221 Cache results of file text extraction on the model, to make
  reindexing faster.

3.29 (2010-04-30)
-----------------

- Added an "Any" option at the end of the letterbox to allow clearing
  any existing filter (LP#/570853).

- On each communities sub-view, add a "quick links" panel on the right
  margin, with tabs showing tool links, recent content, and members.
  The last two are fetched on demand using AJAX.  This panel is currently
  disabled unless 'demo' is in the query string. See
  http://dev.karlproject.org/specifications/communitydiscovery.html#step-2-quick-links

- Implemented sub-views for the '/communities/' page:  "Mine" (communities
  of which I am a member), "Active" (communities having acitivty within
  the past 30 days), and "All".  Drop the "My communities" portlet.  This
  menu is currently disabled unless 'demo' is in the query string.  See
  http://dev.karlproject.org/specifications/communitydiscovery.html#step-one-dedicated-views

- Add "Community" to list of types in advanced search (LP#571218).

- Add 'fax' field to user profiles (LP#570204).

- Don't blow up when managing tags from profile when no tags are
  present for the profile (LP#558743)
